--- a/contato.html
+++ b/contato.html
@@ -71,12 +71,13 @@
    <a href="https://www.facebook.com/loranregisoficial/" base target="_blank" class="fa fa-facebook"></a>
     <a href="https://www.instagram.com/loranregisofficial/" base target="_blank" class="fa fa-instagram"></a>
     <a href="https://soundcloud.com/loranregis/" base target="_blank" class="fa fa-soundcloud"></a>
-    
+
+<address style="float: left">
+Desenvolvido por <a href="curriculo.html">Luciano Smanioto</a>.<br> 
+</address>
 
     </div>   
+
     
-</body>
-</html> 
-    </div>
 </body>
 </html>
