--- a/contato.html
+++ b/contato.html
@@ -72,9 +72,9 @@
     <a href="https://www.instagram.com/loranregisofficial/" base target="_blank" class="fa fa-instagram"></a>
     <a href="https://soundcloud.com/loranregis/" base target="_blank" class="fa fa-soundcloud"></a>
 
-<address style="float: left">
-Desenvolvido por <a href="curriculo.html">Luciano Smanioto</a>.<br> 
-</address>
+<footer style="align:left;">
+  <p>Desenvolvido por: <a href="curriculo.html">Luciano Smanioto</a></p>
+</footer>
 
     </div>   
 
