--- a/contato.html
+++ b/contato.html
@@ -72,11 +72,14 @@
     <a href="https://www.instagram.com/loranregisofficial/" base target="_blank" class="fa fa-instagram"></a>
     <a href="https://soundcloud.com/loranregis/" base target="_blank" class="fa fa-soundcloud"></a>
 
-<footer style="position: relative; left: -600px;">
-        <p>Desenvolvido por: <a href="curriculo.html">Luciano Smanioto</a></p>
-      </footer>
-
     </div>   
+
+    <div>
+        <footer style="position: relative; float: left; padding: 25px;">
+          <p>Desenvolvido por: <a href="curriculo.html"><br>
+            Luciano Smanioto</a></p>
+        </footer>   
+      </div>
 
     
 </body>
