--- a/curriculo.html
+++ b/curriculo.html
@@ -92,7 +92,9 @@
                 <br>
         <p><b>Empresa: Jornal Palavra Palhocense</b></p>
         <p>Cargo: Editor</p>
-        <p>Descrição das atividades: Atuei como editor do jornal, pautando a reportagem, produzindo a pauta, editando as matérias, desenhando o espelho, orientando a diagramação e corrigindo textos; eventualmente também escrevia matérias e diagramava a edição do dia</p>
+        <p>Descrição das atividades: Atuei como editor do jornal, pautando a reportagem, produzindo a pauta,<br>
+        editando as matérias, desenhando o espelho, orientando a diagramação e corrigindo textos; eventualmente<br>
+        também escrevia matérias e diagramava a edição do dia</p>
         <p>Período: 2013-2020</p>
 
         <br>
