--- a/index.html
+++ b/index.html
@@ -1,26 +1,23 @@
 <!DOCTYPE html>
-<htmllang="pt-br">
+<html lang="pt-br">
 <head>
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Loran Regis</title>
-  </head>
-
 <link rel="stylesheet" href="style.css">
 <style>
-
   body {
-
-background-image: url(backrockgif.gif);
-background-repeat: no-repeat;
-background-attachment: fixed;  
-background-size: cover;
-
-}
-  
+    background-image: url('backrockgif.gif');
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: contain;  
+    background-position: center center;
+    height: 100vh;
+  }
 </style>
-  
+</head>
+
 <body>
 
 <nav id="menu-h">
@@ -30,10 +27,11 @@ background-size: cover;
 <li><a href="galeria.html">Galeria</a></li>
 <li><a href="autorais.html">Lançamentos</a></li>
 <li><a href="homecards.html">Loja</a></li>
-<li><a href="https://open.spotify.com/intl-pt/artist/2TMlbnArb0kxke9WFQMruB">Spotify</a</li>
-<li><a href="https://www.youtube.com/channel/UCpn0Ke2a3GwJyggU177TofQ" base target="_blank">YouTube</a></li>
+<li><a href="https://open.spotify.com/intl-pt/artist/2TMlbnArb0kxke9WFQMruB">Spotify</a></li>
+<li><a href="https://www.youtube.com/channel/UCpn0Ke2a3GwJyggU177TofQ" target="_blank">YouTube</a></li>
 <li><a href="contato.html">Contato</a></li>
 </ul>
 </nav>
+
 </body>
 </html>
